--- a/epk.html
+++ b/epk.html
@@ -204,7 +204,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bhVoYZvVsOVd5fRBnNLs1xeDDgSMHYiNP6Oe9da8vRd87sSqkv1LYYBS11Fd6QZejCtpGSer3/x4+8Urk1QlMKIdOtTPeVJont6doMKxPAUHzDBRGHBYEsPNz0aIBhLx.rsn9hP9YO+B+Cn2zVZ/mV56JXjPOF/u7uIwdPoHFyoGwwCe4yR0HZlFTA2blNZqEo30+09NzzyDyjcGdMyGTdJYnxiBH75lZFPhkm5zRAzesrGYM8w1Vqq3dOgHp0/Xd">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BUeuJqX4NZ/JNEdu0z/yn3Y7r/LBf3Wa8I7lXtpu+AJqxu0PEcvyThmaU8odZBuwmElIJ5d9pbkC7C+epq25GKy6wd5g/a1yIgpVCaraOJ+uf//mx2cB8hgtiiklH706.UNb+X5dGMsD3rXYHaOFZE0kqO5g54x57St8vvLWx452TW7mEfNHRIMGpg/+F18f+J3g+Fl1Au4WeH67JlG0//EH8c25Odab5Xi9Ld+z3jvtRtYOcEwpHBgoAi3IPTmA0">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
@@ -294,7 +294,7 @@ Se preferir, entre em contato pelo nosso whatsapp
                     
                 <li class="foot-menu-item mbr-fonts-style display-7">
                         <a class="text-white mbr-bold" href="conhecaladynewton.html" target="_blank">Conheça</a></li><li class="foot-menu-item mbr-fonts-style display-7">
-                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
+                        <a class="text-white mbr-bold" href="espacodofa.html" target="_blank">Espaço do Fã</a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="page7.html" class="text-white"><strong>Blog</strong></a></li><li class="foot-menu-item mbr-fonts-style display-7"><a href="epk.html" class="text-secondary"><strong>Contrate a Lady</strong></a></li></ul>
             </div>
             <div class="row social-row">
                 <div class="social-list align-right pb-2">
