--- a/blog.html
+++ b/blog.html
@@ -125,7 +125,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
 <br>
-<br> É simples, a nossa banda não vive numa bolha. Estamos inseridos em um ecosistema que envolve artistas, produtores, casas de shows e outros parceiros... E no fundo um depende do outro para crescer. As bandas de rock autoral não possuem tantos espaços assim para mostrar o seu trabalho, e quando eu vi que o The Queen abriu as portas para essa proposta de show, fiquei no mínimo curioso. &nbsp;</p>
+<br> É simples, a nossa banda não vive numa bolha. Estamos inseridos em um ecosistema que envolve artistas, produtores, casas de shows e outros parceiros... E no fundo um depende do outro para crescer. As bandas de rock autoral não possuem tanto espaço assim para mostrar o seu trabalho, e quando eu vi que o The Queen abriu as portas para essa proposta de show, fiquei no mínimo curioso. &nbsp;</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="page8.html">Ler o Resto!</a></div>
             </div>
         </div>
