--- a/blog_allyouneedislives.html
+++ b/blog_allyouneedislives.html
@@ -137,7 +137,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br>Vou transcrever aqui a chamada pro evento, nela você consegue entender melhor a proposta do evento:<br><br>"Dentre todos os pequenos prazeres da vida, um  dos que mais fazem falta é sentar com os amigos na mesa do bar e escutar aquela música que te faz encher de emoção. Você não está sozinho... todos nós sentimos a ausência do convivio social e do caldinho antes da cerveja<br><br>É por isso que nós, músicos,  tomamos a iniciativa de proporcionar a todos vocês uma programação inteira de apresentações ao vivo. Serão 16 lives durante a semana, 16h de shows elaborados especificamente para você curtir em casa pelo celular, TV, tablet, enfim, todo dia vai ter um artista/banda se apresentando!<br><br>Vamos tentar trazer para você aquela sensação de uns meses atrás, quando você ia para seu bar favorito aproveitar o happy hour e cantar aquele refrão favorito!"<br><br><br></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br>Vou transcrever aqui a chamada pro evento, nela você consegue entender melhor a proposta da gente:<br><br>"Dentre todos os pequenos prazeres da vida, um  dos que mais fazem falta é sentar com os amigos na mesa do bar e escutar aquela música que te faz encher de emoção. Você não está sozinho... todos nós sentimos a ausência do convivio social e do caldinho antes da cerveja<br><br>É por isso que nós, músicos,  tomamos a iniciativa de proporcionar a todos vocês uma programação inteira de apresentações ao vivo. Serão 16 lives durante a semana, 16h de shows elaborados especificamente para você curtir em casa pelo celular, TV, tablet, enfim, todo dia vai ter um artista/banda se apresentando!<br><br>Vamos tentar trazer para você aquela sensação de uns meses atrás, quando você ia para seu bar favorito aproveitar o happy hour e cantar aquele refrão favorito!"<br><br><br></p>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>Na primeira edição, tivemos como parceiros o querido<strong> <a href="http://www.mafuadojanuario.com.br" target="_blank">Mafuá do Januario</a>,&nbsp;</strong>um bar que já foi palco de muitos shows da Lady Newton e a&nbsp;<a href="http://www.cervejariamalakoff.com.br" target="_blank">Cervejaria Malakoff </a>, que deu pra gente provar a nova cerveja deles, a "Golden". &nbsp;Além dos parceiros, a Lady participou dessa programação épica de músicos e bandas:</p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>Na primeira edição, tivemos como parceiros o querido <a href="http://www.mafuadojanuario.com.br" target="_blank">Mafuá do Januario</a>,&nbsp;um bar que já foi palco de muitos shows da Lady Newton e a&nbsp;<a href="http://www.cervejariamalakoff.com.br" target="_blank">Cervejaria Malakoff </a>, que deu pra gente uma amostra da nova cerveja deles, a "Blond Ale". &nbsp;Além dos parceiros, a Lady participou dessa programação épica de músicos e bandas:</p></div>
         </div>
     </div>
 </section>
