--- a/cenarecife.html
+++ b/cenarecife.html
@@ -219,7 +219,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>05 de Abril de 2020. </strong><a href="http://instagram.com/dosederomeu" target="_blank" class="text-secondary">Dose de Romeu</a><strong>&nbsp;</strong>regrava a música "Pivô" com nova formação.&nbsp;</p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>05 de Abril de 2020. </strong><a href="http://instagram.com/dosederomeu" target="_blank" class="text-secondary">Dose de Romeu</a><strong>&nbsp;</strong>regrava a música "Pivô" com nova formação.&nbsp;</p>
                         </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><br><strong>04 de Abril de 2020.</strong><a href="http://instagram.com/baha.oficial" target="_blank" class="text-secondary"> Baha!</a>&nbsp;lança o clipe de "Grita meu nome".&nbsp;</p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>04 de Abril de 2020.</strong><a href="http://instagram.com/baha.oficial" target="_blank" class="text-secondary"> Baha!</a>&nbsp;lança o clipe de "Grita meu nome".&nbsp;</p>
                         </div>
                     </div>
                 </div>
@@ -307,7 +307,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>19 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum "Bootleg Espiral das Artes, Pt. 2 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong><br></strong><strong>19 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp; e <a href="http://instagram.com/zecavianamusic" target="_blank">Zeca Viana</a> lançam o álbum "Bootleg Espiral das Artes, Pt. 2 (Ao Vivo)"</p>
                         </div>
                     </div>
                 </div>
@@ -373,7 +373,7 @@
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
-                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>12 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;lança o álbum"Bootleg Espiral das Artes, Pt. 1 (Ao Vivo)", com participação de <a href="http://instagram.com/zecavianamusic" target="_blank" class="text-secondary">Zeca Viana</a></p>
+                            <p class="mbr-text mb-0 mbr-fonts-style display-7"><strong>12 de Março de 2020. &nbsp;</strong><a href="http://instagram.com/sargaconightclub" target="_blank" class="text-secondary">Sargaço Night Club</a>&nbsp;e <a href="http://www.instagram.com/zecavianamusic" target="_blank">Zeca Viana</a>&nbsp;lançam o álbum"Bootleg Espiral das Artes, Pt. 1 (Ao Vivo)".</p>
                         </div>
                     </div>
                 </div>
