--- a/1a-Quarta-autoral-thequeen.html
+++ b/1a-Quarta-autoral-thequeen.html
@@ -8,19 +8,12 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/1a-Quarta-autoral-thequeen-meta.jpg">
   <meta property="og:image" content="assets/images/1a-Quarta-autoral-thequeen-meta.jpg">
-  <meta name="twitter:title" content="[blog] The Queen abre as portas para o Rock Autoral">
+  <meta name="twitter:title" content="A história da Lady Newton em videos">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="Estreia da Quarta Autoral com as bandas Paranozes, Baha! e Duque de Arake....Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
-
- É simples, a nossa banda não vive numa bolha. Estamos inseridos em um ecosistema que envolve artistas, produtores, casas de shows e outros parceiros... E no fundo um depende do outro para crescer. As bandas de rock autoral não possuem tantos espaços assim para mostrar o seu trabalho, e quando eu vi que o The Queen abriu as portas para essa proposta de show, fiquei no mínimo curioso.  
-
-Para quem não conhece o bar, o The Queen fica em Boa Viagem e já é notoriamente conhecido por ser um pedacinho de Londres em plena Domingos Ferreira. O ambiente é todo decorado no estilo de um pub britanico, e é uma casa massa de se tocar, a Lady Newton já participou da agenda da casa, junto com outras bandas de cover da cena: Zero Bronca, Malakoff,Rodrigo Morcego, Mac Fly e Gin & Tonic para citar algumas. 
-
-Mas, recentemente, o The Queen anunciou que abriria as portas para outro tipo de atração: bandas que tem o show permeado de canções próprias. Batizado de "Quarta Autoral" o evento possui entrada gratuita e a ideia é fazer com que as bandas tenham um palco, sistema de som e uma platéia disposta a ouvir o seu trabalho. Visitei o bar junto com meu amigo Cauê Castro na quarta feira passada (04/03/2020) e tive a oportunidade de conhecer as três bandas que tocaram na noite: Paranozes, Baha! e Duque de Arake. 
-">
+  <meta name="description" content="">
   
-  <title>[blog] The Queen abre as portas para o Rock Autoral</title>
+  <title>A história da Lady Newton em videos</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
