--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/index-meta.jpeg">
   <meta property="og:image" content="assets/images/index-meta.jpeg">
-  <meta name="twitter:title" content="Lady Newton">
+  <meta name="twitter:title" content="Banda Lady Newton">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
   <meta name="description" content="Fundada por 4 engenheiros, a Lady Newton descobriu uma forma descontraída de tocar o bom e velho rock 'n' roll.  O Instagram da banda sempre foi o ponto de encontro dos fãs, mas acabou ficando pequeno para a quantidade de memes, músicas e vídeos. Chegou a hora da Lady invadir a web!">
   
-  <title>Lady Newton</title>
+  <title>Banda Lady Newton</title>
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
