--- a/blog_PlaylistsQuarentena.html
+++ b/blog_PlaylistsQuarentena.html
@@ -18,17 +18,18 @@ A Lady Newton não está sozinha nisso, muitos amigos nossos criaram Playlists n
 Portanto, ao ouvir uma playlist, você está se abrindo para um universo de novas canções, porque o Spotify vai te recomendar cada vez mais artistas do mesmo estilo. Foi pensando nisso que a Lady Newton separou algumas playlists para você conhecer:">
   
   <title>[blog] Playlists para conhecer na Quarentena!</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/facebook-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -301,6 +302,53 @@ Portanto, ao ouvir uma playlist, você está se abrindo para um universo de nova
     </div>
 </section>
 
+<section class="header3 cid-rWVg3xAGtT mbr-parallax-background" id="extTeams17-8z">
+
+    
+
+    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(0, 0, 0);">
+    </div>
+
+    <div class="container">
+        <div class="row">
+
+            <div class="col-md-4 img-col col-lg-3">
+                <div class="image align-center">
+                    <img src="assets/images/boa19-420x747.jpeg" alt="" title="">
+                </div>
+            </div>
+
+
+
+            <div class="col-md-8 col-lg-6">
+                <div class="media-content">
+                    <h1 class="mbr-section-title mbr-white align-left pb-2 mbr-fonts-style display-2">Autor desse post</h1>
+                    <h3 class="mbr-section-subtitle mbr-white mbr-semibold align-left mbr-light pb-2 mbr-fonts-style display-1">Caio Neves</h3>
+                    <div class="mbr-section-text mbr-black pb-2 ">
+                        <p class="mbr-text align-left mbr-white mbr-fonts-style display-7">Vocalista, chefe do marketing e famoso por fazer os memes mais &nbsp;toscos do instagram da Lady Newton.</p>
+                    </div>
+
+                    <div class="icon-box align-left">
+                        <div class="item">
+                            <span class="mbr-iconfont mobi-mbri-clock mobi-mbri"></span>
+                            <p class="date mbr-white mbr-fonts-style display-7">12-03-2020</p>
+                        </div>
+                        <div class="item">
+                            <a href="espacodofa.html#form3-g" target="_blank"><span class="mbr-iconfont icon54-v2-email-app-2"></span></a>
+                            <p class="date mbr-white mbr-fonts-style display-7"><a href="espacodofa.html#form3-g" class="text-white">Se inscrever na lista de e-mails</a></p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+</section>
+
 <section once="footers" class="cid-rPJyv7S1OG" id="footer7-7t">
 
     
@@ -351,18 +399,19 @@ Portanto, ao ouvir uma playlist, você está se abrindo para um universo de nova
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
+  <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
   <script src="https://apis.google.com/js/plusone.js"></script>
   <script src="assets/facebook-plugin/facebook-script.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
