--- a/blog_a_historia_da_lady_em_videos.html
+++ b/blog_a_historia_da_lady_em_videos.html
@@ -140,7 +140,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1">Vídeo 1 : Registros do Passado</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Esse é um compilado de todos os momentos iniciais da banda, sem som.<br></p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white-outline display-4" href="#">Assistir no Youtube (Celular)</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white-outline display-4" href="https://www.youtube.com/watch?v=FNgwULyagm8" target="_blank">Assistir no Youtube (Celular)</a></div>
             </div>
         </div>
     </div>
