--- a/live.html
+++ b/live.html
@@ -102,7 +102,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     <div class="container">
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
-                <h2 class="align-center pb-3 mbr-fonts-style display-1">Verdade ou Consequência?</h2>
+                <h2 class="align-center pb-3 mbr-fonts-style display-1">Bate Papo da Lady Newton (ao Vivo)</h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Fica ligado que vai rolar pela primeira vez aqui no site uma transmissão ao vivo da banda!<br><br>Quer participar? Vamos responder todas as perguntas dos fãs!</h3>
                 
             </div>
@@ -116,7 +116,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 100%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/EcDLqNKj4Lk?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/kGfurC1fZX4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
@@ -153,7 +153,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     <div class="container pt-5 mt-2">
         <div class=" countdown-cont align-center p-4">
             <div class="event-name align-left mbr-white ">
-                <h4 class="mbr-fonts-style display-5">Bate papo com a Lady - Verdade ou Consequência?</h4>
+                <h4 class="mbr-fonts-style display-5">Bate papo com a Lady - Respondendo aos Fãs</h4>
             </div>
             <div class="countdown align-center py-2" data-due-date="2020/05/09 20:00">
             </div>
