--- a/1a-Quarta-autoral-thequeen.html
+++ b/1a-Quarta-autoral-thequeen.html
@@ -8,12 +8,14 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/1a-Quarta-autoral-thequeen-meta.jpg">
   <meta property="og:image" content="assets/images/1a-Quarta-autoral-thequeen-meta.jpg">
-  <meta name="twitter:title" content="A história da Lady Newton em videos">
+  <meta name="twitter:title" content="[blog] The Queen Abre portas para o Rock Autoral">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Você deve estar se perguntando... por que a Lady Newton iria falar sobre esse evento que o The Queen organizou, se nós nem fizemos parte da programação?
+
+ É simples, a nossa banda não vive numa bolha. Estamos inseridos em um ecossistema que envolve artistas, produtores, casas de shows e outros parceiros... e no fundo um depende do outro para crescer. As bandas de rock autoral não possuem tanto espaço assim para mostrar o seu trabalho, e quando eu vi que o The Queen abriu as portas para essa proposta de show, fiquei no mínimo curioso.  ">
   
-  <title>A história da Lady Newton em videos</title>
+  <title>[blog] The Queen Abre portas para o Rock Autoral</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
