--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     </nav>
 </section>
 
-<section class="cid-qTkA127IK8 mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=rEBI51NlVZM?autoplay=1&amp;mute=1" id="header2-1">
+<section class="cid-qTkA127IK8 mbr-fullscreen" data-bg-video="https://youtu.be/rEBI51NlVZM?t=69&amp;autoplay=1&amp;mute=1" id="header2-1">
 
     
 
