--- a/live.html
+++ b/live.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:image:src" content="assets/images/live-meta.png">
+  <meta property="og:image" content="assets/images/live-meta.png">
+  <meta name="twitter:title" content="Live da Lady">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/estampa1-128x176.png" type="image/x-icon">
   <meta name="description" content="Veja ao vivo o show da Lady Newton!">
